--- a/00_pre_requisite.Rmd
+++ b/00_pre_requisite.Rmd
@@ -9,14 +9,17 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## 강의소개
+이 강의는 R을 이용해서 데이터를 다루어 보신 분을 대상으로 데이터를 다루고, 시각화하는 방법을 소개하는 강의입니다. 
+
 ## Lecture Notes and resources
 * 강의자료 및 참고자료: [github.com/mdsung/2021_TBD_R_tutorial](github.com/mdsung/2021_TBD_R_tutorial)
 
 
 ![R](src/github_download.png)
 * `data/`: 실습시 사용하는 데이터 폴더
-* `renv/`: 실습시 필요한 renv를 저장한 폴더
 * `src/`: 노트에서 필요한 그림 저장 폴더
+* `cheatsheet/`: 참고할만한 R 자료 저장 폴더 
 
 ## Install R
 [Download R install file](https://cran.r-project.org/src/base/R-4/) 
