--- a/01_introduce_mimic_dataset.Rmd
+++ b/01_introduce_mimic_dataset.Rmd
@@ -10,38 +10,39 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## The Medical Information Mart for Intensive Care(MIMIC) IV
-* MIMIC IV: open source dataset for ICU patients
-* Method
-1. **Acquisition**. Data for patients who were admitted to the BIDMC emergency department or one of the intensive care units were extracted from the respective hospital databases. A master patient list was created which contained all medical record numbers corresponding to patients admitted to an ICU or the emergency department between 2008 - 2019. All source tables were filtered to only rows related to patients in the master patient list.
 
-2. **Preparation**. The data were reorganized to better facilitate retrospective data analysis. This included the denormalization of tables, removal of audit trails, and reorganization into fewer tables. The aim of this process is to simplify retrospective analysis of the database. Importantly, data cleaning steps were not performed, to ensure the data reflects a real-world clinical dataset.
+-   MIMIC IV: open source dataset for ICU patients
+-   Method
 
-3. **Deidentify**. Patient identifiers as stipulated by HIPAA were removed. Patient identifiers were replaced using a random cipher, resulting in deidentified integer identifiers for patients, hospitalizations, and ICU stays. Structured data were filtered using look up tables and allow lists. If necessary, a free-text deidentification algorithm was applied to remove PHI from free-text. Finally, date and times were shifted randomly into the future using an offset measured in days. A single date shift was assigned to each subject_id. As a result, the data for a single patient are internally consistent. For example, if the time between two measures in the database was 4 hours in the raw data, then the calculated time difference in MIMIC-IV will also be 4 hours. Conversely, distinct patients are not temporally comparable. That is, two patients admitted in 2130 were not necessarily admitted in the same year.
+1.  **Acquisition**. Data for patients who were admitted to the BIDMC emergency department or one of the intensive care units were extracted from the respective hospital databases. A master patient list was created which contained all medical record numbers corresponding to patients admitted to an ICU or the emergency department between 2008 - 2019. All source tables were filtered to only rows related to patients in the master patient list.
+
+2.  **Preparation**. The data were reorganized to better facilitate retrospective data analysis. This included the denormalization of tables, removal of audit trails, and reorganization into fewer tables. The aim of this process is to simplify retrospective analysis of the database. Importantly, data cleaning steps were not performed, to ensure the data reflects a real-world clinical dataset.
+
+3.  **Deidentify**. Patient identifiers as stipulated by HIPAA were removed. Patient identifiers were replaced using a random cipher, resulting in deidentified integer identifiers for patients, hospitalizations, and ICU stays. Structured data were filtered using look up tables and allow lists. If necessary, a free-text deidentification algorithm was applied to remove PHI from free-text. Finally, date and times were shifted randomly into the future using an offset measured in days. A single date shift was assigned to each subject_id. As a result, the data for a single patient are internally consistent. For example, if the time between two measures in the database was 4 hours in the raw data, then the calculated time difference in MIMIC-IV will also be 4 hours. Conversely, distinct patients are not temporally comparable. That is, two patients admitted in 2130 were not necessarily admitted in the same year.
 
 ![](src/mimiciv_homepage.png)
 
-* **Core**: 
-  The core module contains patient tracking data. Demographics, hospital admissions, and in-hospital ward transfers are described here.
+-   **Core**: The core module contains patient tracking data. Demographics, hospital admissions, and in-hospital ward transfers are described here.
 
-* **Hosp**:
-  The Hosp module provides all data acquired from the hospital wide electronic health record. Information covered includes laboratory measurements, microbiology, medication administration, and billed diagnoses.
+-   **Hosp**: The Hosp module provides all data acquired from the hospital wide electronic health record. Information covered includes laboratory measurements, microbiology, medication administration, and billed diagnoses.
 
-* **ICU**:
-  The ICU module contains information collected from the clinical information system used within the ICU. Documented data includes intravenous administrations, ventilator settings, and other charted items.
+-   **ICU**: The ICU module contains information collected from the clinical information system used within the ICU. Documented data includes intravenous administrations, ventilator settings, and other charted items.
 
-* **CXR**:
-  The CXR module provides lookup tables linking patient identifiers with MIMIC-CXR study_id and dicom_id, allowing analysis of patient chest x-rays with the associated clinical data.
+-   **CXR**: The CXR module provides lookup tables linking patient identifiers with MIMIC-CXR study_id and dicom_id, allowing analysis of patient chest x-rays with the associated clinical data.
 
 ## Access to MIMIC IV
+
 Researchers seeking to use the database must:
 
-1. Become a credentialed user on PhysioNet. This involves completion of a training course in human subjects research.
-2. Sign the data use agreement (DUA) for MIMIC-IV. Adherence to the terms of the DUA is paramount.
-3. Follow the tutorials for direct cloud access (recommended), or download the data locally.
+1.  Become a credentialed user on PhysioNet. This involves completion of a training course in human subjects research.
+2.  Sign the data use agreement (DUA) for MIMIC-IV. Adherence to the terms of the DUA is paramount.
+3.  Follow the tutorials for direct cloud access (recommended), or download the data locally.
 
-## Download MIMIC dataset 
+## Download MIMIC dataset
+
 ![](src/mimiciv_download.png)
 
 ## References
-* [https://mimic-iv.mit.edu/docs/](https://mimic-iv.mit.edu/docs/)
-* [https://physionet.org/content/mimiciv/1.0/](https://physionet.org/content/mimiciv/1.0/)
+
+-   <https://mimic-iv.mit.edu/docs/>
+-   <https://physionet.org/content/mimiciv/1.0/>
