--- a/00_pre_requisite.Rmd
+++ b/00_pre_requisite.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Pre-requisite for R tutorial"
 author: "MinDong Sung"
-date: "4/2/2021"
+date: "2021-04-09"
 output: html_document
 ---
 
