--- a/20210702_developement_environment_setting/presentation/20210702_presentation_development_environment_setting.Rmd
+++ b/20210702_developement_environment_setting/presentation/20210702_presentation_development_environment_setting.Rmd
@@ -15,8 +15,41 @@ output:
 options(htmltools.dir.version = FALSE)
 ```
 
-class: center, middle
+class: center, middle, inverse
 # Development Environment
+
+---
+class: center, middle
+# Wireless Lan
+---
+# YUHS-external
+- 그룹웨어 ID / Password 이용해서 접속 가능
+---
+## Connect to Print(for Mac)
+1. 윈도우 프린트 공유가 필요하고 **공유 위치(ip)**와 **공유 프린트 이름**이 필요하다.
+    - IP: 10.19.12.58
+    - Printer Name: Kyocera FS-4025DN KX
+1. smb://[IP address of Printer]로 접속하여 인증을 한다. 
+1. 프린트 추가 - 고급
+    - 유형: windows printer via spoolss
+    - 기기: 다른기기
+    - URL: smb://10.19.12.58/Kyocera%20FS-4025DN%20KX
+        - 빈칸에 **%20**을 입력한다.
+    - 사용은 소프트웨어가 있으면 좋겠지만 없으면 일반 postscript 프린트로 설정
+
+```{r echo = F, message = F, fig.align='center', out.width='30%'}
+knitr::include_graphics('figure/connect_to_network_printer.png')
+```
+---
+## Connect to PC (feat. Microsoft Remote Desktop)
+```{r echo = F, message = F, fig.align='center', out.width='80%'}
+knitr::include_graphics('figure/RDP_setting.png')
+```
+---
+## Connect to PC (feat. Microsoft Remote Desktop)
+```{r echo = F, message = F, fig.align='center', out.width='100%'}
+knitr::include_graphics('figure/RDP_desktop.png')
+```
 
 ---
 class: inverse, center, middle
