Add notes to notebooks

--- a/notebook/03_feature_engineeared_lr.ipynb
+++ b/notebook/03_feature_engineeared_lr.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression #2 - feature \n",
+    "* Author: MinDong Sung\n",
+    "* Date: 2022-03-29\n",
+    "---\n",
+    "* <img src=\"https://media.vlpt.us/images/guide333/post/8ef4069d-23b6-417d-9e52-7e6f9f10f655/Screenshot%20from%202021-03-10%2020-55-28.png\" alt=\"feature_engineering\" width=\"500\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -8,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_pickle('../data/processed/data.pkl')\n"
+    "data = pd.read_pickle('../data/processed/data.pkl')"
    ]
   },
   {
