--- a/notebook/01_EDA.ipynb
+++ b/notebook/01_EDA.ipynb
@@ -1,6 +1,104 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA(Exploratory Data Anlysis)\n",
+    "* Author: MinDong Sung\n",
+    "* Date: 2022-03-29\n",
+    "---\n",
+    "* EDA is an iterative cycle\n",
+    "    1. Generate questions about your data.\n",
+    "    2. Search for answers by visualising, transforming, and modelling your data\n",
+    "    3. Use what you learn to refine your questions and/or generate new questions.\n",
+    "    * Reference: [https://r4ds.had.co.nz/exploratory-data-analysis.html](https://r4ds.had.co.nz/exploratory-data-analysis.html)\n",
+    "> “There are no routine statistical questions, only questionable statistical routines.” — Sir David Cox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset - eICU dataset\n",
+    "\n",
+    "> The Philips eICU program is a transformational critical care telehealth program that delivers need-to-know information to caregivers, empowering them to care for the patients. It is a supplement — not a replacement — to the bedside team, and the data utilized by the remote care givers are archived for research purposes.\n",
+    "\n",
+    "> Through this work, we have generated a large database which has potential for facilitating additional research initiatives on patient outcomes, trends, and other best practice protocols in use today at most healthcare facilities. The Philips eICU Research Institute (eRI), which maintains the data, has generously contributed the eICU Collaborative Research Database described here.\n",
+    "\n",
+    "* Reference: [https://eicu-crd.mit.edu](https://eicu-crd.mit.edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Raw Tables\n",
+    "\n",
+    "* [apacheApsVar](https://eicu-crd.mit.edu/eicutables/apachepatientresult/)\n",
+    "    - Contains the variables used to calculate the Acute Physiology Score (APS) III for patients. APS-III is an established method of summarizing patient severity of illness on admission to the ICU, and is a part of the Acute Physiology Age Chronic Health Evaluation (APACHE) system of equations for predicting outcomes for ICU patients.\n",
+    "    - links to: `patientunitstayid`\n",
+    "\n",
+    "\n",
+    "* [apachePatientResult](https://eicu-crd.mit.edu/eicutables/apachepatientresult/)\n",
+    "    - Provides predictions made by the APACHE score (versions IV and IVa), including probability of mortality, length of stay, and ventilation days.\n",
+    "    - links to: `patientunitstayid`\n",
+    "\n",
+    "    \n",
+    "* [apachePredVar](https://eicu-crd.mit.edu/eicutables/apachepredvar/)\n",
+    "    - Provides variables underlying the APACHE predictions. Acute Physiology Age Chronic Health Evaluation (APACHE) consists of a groups of equations used for predicting outcomes in critically ill patients. APACHE II is based on the APS or acute physiology score (which uses 12 physiologic values), age, and chronic health status within one of 56 disease groups. APACHE II is no longer considered valid due to inadequate case mix index adjustments and over estimates mortality because it is based on models from the 1970s-1980s. APACHE III, introduced in 1991, improved the equation by changing the number and weights of the APS and revising the measurement of chronic health status. APACHE IVa further improved the equations and has been described as having the highest discrimination of any other adult risk adjustment model (SAPS 3, SOFA, MPM III). \n",
+    "    - links to: `patientunitstayid`\n",
+    "\n",
+    "## Processed tables\n",
+    "* aps_input: \n",
+    "    - from `apacheApsVar`\n",
+    "    - select columns:\n",
+    "    [\n",
+    "    \"patientunitstayid\",\n",
+    "    \"gender\",\n",
+    "    \"age\",\n",
+    "    \"admitdiagnosis\",\n",
+    "    \"aids\",\n",
+    "    \"hepaticfailure\",\n",
+    "    \"lymphoma\",\n",
+    "    \"metastaticcancer\",\n",
+    "    \"leukemia\",\n",
+    "    \"immunosuppression\",\n",
+    "    \"cirrhosis\",\n",
+    "    \"electivesurgery\",\n",
+    "    \"activetx\",\n",
+    "    \"readmit\",\n",
+    "    \"diabetes\",\n",
+    "]\n",
+    "\n",
+    "* other_input\n",
+    "    - from `apachePredVar`\n",
+    "    - select columns:\n",
+    "    [\n",
+    "    \"patientunitstayid\",\n",
+    "    \"physicianspeciality\",\n",
+    "    \"physicianinterventioncategory\",\n",
+    "    \"acutephysiologyscore\",\n",
+    "    \"apachescore\",\n",
+    "    \"apacheversion\",\n",
+    "    \"actualicumortality\",\n",
+    "    ]   \n",
+    "\n",
+    "* outcomes: \n",
+    "    - from `apachePatientResult`\n",
+    "    - select columns:\n",
+    "    [\n",
+    "        \"patientunitstayid\",\n",
+    "        \"actualicumortality\",\n",
+    "        \"actualhospitalmortality\",\n",
+    "        \"actualhospitallos\",\n",
+    "    ]\n",
+    "\n",
+    "* Reference: [code/strip_dataset.py](../code/strip_dataset.py)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -8,8 +106,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "pd.options.display.max_rows = 999"
+    "import numpy as np"
    ]
   },
   {
@@ -428,7 +525,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "data[float_columns] = data[float_columns].replace(-1, np.nan).astype(float)\n",
+    "data[float_columns] = data[float_columns].astype(float)\n",
     "data[categorical_columns] = data[categorical_columns].astype('category')"
    ]
   },
@@ -630,6 +727,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas profiling\n",
+    "* Reference: [https://github.com/ydataai/pandas-profiling](https://github.com/ydataai/pandas-profiling)\n",
+    "* Caveat: pandas <= 1.3.5\n",
+    "    - `pip install pandas==1.3.5`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -640,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +782,6 @@
        "      <th>wbc</th>\n",
        "      <th>temperature</th>\n",
        "      <th>...</th>\n",
-       "      <th>lymphoma</th>\n",
        "      <th>metastaticcancer</th>\n",
        "      <th>leukemia</th>\n",
        "      <th>immunosuppression</th>\n",
@@ -685,6 +791,7 @@
        "      <th>readmit</th>\n",
        "      <th>diabetes</th>\n",
        "      <th>actualicumortality</th>\n",
+       "      <th>actualhospitalmortality</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -706,10 +813,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -732,8 +839,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -754,10 +861,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -802,15 +909,15 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 39 columns</p>\n",
+       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -821,30 +928,37 @@
        "6         0    0        0   3.0    6.0     5.0   0.0    NaN   NaN   \n",
        "8         0    1        0   3.0    6.0     4.0   0.0    NaN  42.7   \n",
        "\n",
-       "   temperature  ...  lymphoma  metastaticcancer  leukemia  immunosuppression  \\\n",
-       "0         36.1  ...         0                 0         0                  0   \n",
-       "2         39.3  ...         0                 0         0                  0   \n",
-       "4         35.1  ...         0                 0         0                  0   \n",
-       "6         36.7  ...         0                 0         0                  0   \n",
-       "8         40.1  ...         0                 0         0                  0   \n",
+       "   temperature  ...  metastaticcancer  leukemia  immunosuppression  cirrhosis  \\\n",
+       "0         36.1  ...                 0         0                  0          0   \n",
+       "2         39.3  ...                 0         0                  0          0   \n",
+       "4         35.1  ...                 0         0                  0          0   \n",
+       "6         36.7  ...                 0         0                  0          0   \n",
+       "8         40.1  ...                 0         0                  0          0   \n",
        "\n",
-       "   cirrhosis  electivesurgery  activetx  readmit  diabetes  actualicumortality  \n",
-       "0          0                0         1        0         0                   1  \n",
-       "2          0                0         0        0         1                   0  \n",
-       "4          0                0         1        0         1                   0  \n",
-       "6          0                0         0        0         0                   0  \n",
-       "8          0                0         1        0         0                   0  \n",
+       "   electivesurgery  activetx  readmit  diabetes  actualicumortality  \\\n",
+       "0                0         1        0         0                   1   \n",
+       "2                0         0        0         1                   0   \n",
+       "4                0         1        0         1                   0   \n",
+       "6                0         0        0         0                   0   \n",
+       "8                0         1        0         0                   0   \n",
        "\n",
-       "[5 rows x 39 columns]"
+       "   actualhospitalmortality  \n",
+       "0                        1  \n",
+       "2                        0  \n",
+       "4                        0  \n",
+       "6                        0  \n",
+       "8                        0  \n",
+       "\n",
+       "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.iloc[:,1:-2].head()"
+    "data.iloc[:,1:-1].head()"
    ]
   },
   {
@@ -894,13 +1008,6 @@
    "source": [
     "data.to_pickle('../data/processed/data.pkl')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
